test_regress/t/t_var_xref_bad.out
%Error: t/t_var_xref_bad.v:11:12: Syntax Error: Not expecting FUNCREF under a DOT in dotted expression
   11 |    initial tsk.bad_missing_ref = 0;
      |            ^~~
%Error: t/t_var_xref_bad.v:11:12: Illegal call of a task as a function: 'tsk'
   11 |    initial tsk.bad_missing_ref = 0;
      |            ^~~
%Error: Exiting due to
